@YELP_HELP_RULES@

SUBDIRS = quickref

HELP_ID = evolution

HELP_MEDIA = \
	figures/color-000000.png \
	figures/color-204a87.png \
	figures/color-2e3436.png \
	figures/color-4e9a06.png \
	figures/color-5c3566.png \
	figures/color-8f5902.png \
	figures/color-a40000.png \
	figures/color-c4a000.png \
	figures/color-ce5c00.png \
	figures/evolutionlogo.png \
	figures/html-composer-insert-image.png \
	figures/html-composer-insert-link.png \
	figures/html-composer-insert-rule.png \
	figures/html-composer-insert-table.png \
	figures/minus-icon.png \
	figures/new-mail-notification.png \
	figures/new-mail-switcher.png \
	figures/plus-icon.png \
	figures/search-icon.png \
	figures/window-overview-layers.png

HELP_FILES = \
	backup-restore.page \
	calendar-alarms-and-reminders.page \
	calendar-caldav.page \
	calendar-classifications.page \
	calendar-free-busy.page \
	calendar-google.page \
	calendar-layout-appointment-display.page \
	calendar-layout-general-formatting.page \
	calendar-layout.page \
	calendar-layout-views.page \
	calendar-local.page \
	calendar-marcus-bains-line.page \
	calendar-meetings-delegating.page \
	calendar-meetings.page \
	calendar-meetings-replying-to-invitation.page \
	calendar-meetings-sending-invitation.page \
	calendar-organizing.page \
	calendar-publishing.page \
	calendar-recurrence.page \
	calendar-searching.page \
	calendar-sharing-information.page \
	calendar-timezones.page \
	calendar-usage-add-appointment.page \
	calendar-usage-delete-appointment.page \
	calendar-usage-edit-appointment.page \
	calendar-usage.page \
	calendar-using-several-calendars.page \
	calendar-weather.page \
	calendar-webdav.page \
	change-switcher-appearance.page \
	contacts-add-automatically.page \
	contacts-autocompletion.page \
	contacts-google.page \
	contacts-ldap.page \
	contacts-libreoffice.page \
	contacts-local.page \
	contacts-organizing.page \
	contacts-searching.page \
	contacts-usage-add-contact.page \
	contacts-usage-delete-contact.page \
	contacts-usage-edit-contact.page \
	contacts-usage.page \
	contacts-using-contact-lists.page \
	contacts-using-several-addressbooks.page \
	credits.page \
	data-storage.page \
	default-browser.page \
	deleting-appointments.page \
	deleting-emails.page \
	deleting-to-free-disk-space.page \
	exchange-connectors-overview.page \
	exchange-placeholder.page \
	exporting-data-calendar.page \
	exporting-data-contacts.page \
	exporting-data-mail.page \
	exporting-data.page \
	google-services.page \
	import-apps-mozilla.page \
	import-apps-outlook.page \
	import-data.page \
	import-single-files.page \
	import-supported-file-formats.page \
	index.page \
	intro-application.page \
	intro-first-run.page \
	intro-main-window.page \
	legal.xml \
	mail-access-gmail-imap-account.page \
	mail-access-gmail-pop-account.page \
	mail-account-manage-imap-plus.page \
	mail-account-manage-local-delivery.page \
	mail-account-manage-maildir-format-directories.page \
	mail-account-management.page \
	mail-account-manage-mh-format-directories.page \
	mail-account-manage-microsoft-exchange-evo-ews.page \
	mail-account-manage-microsoft-exchange-evo-mapi.page \
	mail-account-manage-microsoft-exchange.page \
	mail-account-manage-pop.page \
	mail-account-manage-unix-mbox-spool-directory.page \
	mail-account-manage-unix-mbox-spool-file.page \
	mail-account-manage-usenet-news.page \
	mail-attachments.page \
	mail-attachments-received.page \
	mail-attachments-sending.page \
	mail-calendar-sending-invitations.page \
	mail-cannot-see.page \
	mail-change-columns-in-message-list.page \
	mail-change-time-format.page \
	mail-composer-change-quotation-string.page \
	mail-composer-custom-header-lines.page \
	mail-composer-enable-html-format.page \
	mail-composer-external-editor.page \
	mail-composer-forward.page \
	mail-composer-forward-as-attachment.page \
	mail-composer-from-field-override.page \
	mail-composer-html-image.page \
	mail-composer-html-link.page \
	mail-composer-html.page \
	mail-composer-html-rule.page \
	mail-composer-html-table.page \
	mail-composer-html-text.page \
	mail-composer-mail-signatures-manage.page \
	mail-composer-mail-signatures.page \
	mail-composer-mail-signatures-per-account.page \
	mail-composer-message-templates.page \
	mail-composer-message-templates-reply.page \
	mail-composer-message-templates-save.page \
	mail-composer-message-templates-variables.page \
	mail-composer-plain-text.page \
	mail-composer-priority.page \
	mail-composer-reply.page \
	mail-composer-search.page \
	mail-composer-several-recipients.page \
	mail-composer-spellcheck.page \
	mail-composer-write-new-message.page \
	mail-default-CC-and-BCC.page \
	mail-default-folder-locations.page \
	mail-delete-and-undelete.page \
	mail-displaying-character-encodings.page \
	mail-displaying-collapsible-headers.page \
	mail-displaying-images-in-html.page \
	mail-displaying-message.page \
	mail-displaying-sender-photograph.page \
	mail-display-message-source.page \
	mail-duplicates.page \
	mail-encryption-gpg-create-key.page \
	mail-encryption-gpg-decrypting.page \
	mail-encryption-gpg-getting-keys.page \
	mail-encryption-gpg-set-up.page \
	mail-encryption-gpg-signing-encrypting.page \
	mail-encryption.page \
	mail-encryption-s-mime-manage.page \
	mail-encryption-s-mime-signing-encrypting.page \
	mail-filters-actions.page \
	mail-filters-conditions.page \
	mail-filters-not-working.page \
	mail-filters.page \
	mail-folders.page \
	mail-follow-up-flag.page \
	mail-imap-subscriptions.page \
	mail-labels.page \
	mail-layout-changing.page \
	mail-localized-re-subjects.page \
	mail-moving-emails.page \
	mail-not-sent.page \
	mail-organizing.page \
	mail-reading-keyboard-shortcuts.page \
	mail-read-receipts.page \
	mail-received-notification.page \
	mail-receiving-options-exchange-ews.page \
	mail-receiving-options-exchange-mapi.page \
	mail-receiving-options-imap-plus.page \
	mail-receiving-options-local-delivery.page \
	mail-receiving-options-maildir-format-directories.page \
	mail-receiving-options-mh-format-directories.page \
	mail-receiving-options.page \
	mail-receiving-options-pop.page \
	mail-receiving-options-unix-mbox-spool-directory.page \
	mail-receiving-options-unix-mbox-spool-file.page \
	mail-receiving-options-usenet-news.page \
	mail-recognized-thread-related-headers.page \
	mail-refresh-folders.page \
	mail-save-as-pdf.page \
	mail-search-folders-add.page \
	mail-search-folders-conditions.page \
	mail-search-folders-enable.page \
	mail-search-folders.page \
	mail-search-folders-refresh.page \
	mail-searching-attachment-type.page \
	mail-searching.page \
	mail-send-and-receive-automatically.page \
	mail-send-and-receive-manual.page \
	mail-send-and-receive.page \
	mail-sending-options-smtp.page \
	mail-several-pop-accounts.page \
	mail-sorting-message-list.page \
	mail-spam-marking.page \
	mail-spam.page \
	mail-spam-settings.page \
	mail-two-trash-folders.page \
	mail-usenet-subscriptions.page \
	mail-vertical-view.page \
	mail-word-wrap.page \
	mail-working-offline.page \
	memos-searching.page \
	memos-usage-add-memo.page \
	memos-usage-delete-memo.page \
	memos-usage-edit-memo.page \
	memos-usage.page \
	minimize-to-system-tray.page \
	offline.page \
	organizing.page \
	problems-debug-how-to.page \
	problems-getting-help.page \
	problems-reporting-bugs.page \
	searching-items.page \
	sync-with-other-devices.page \
	tasks-caldav.page \
	tasks-display-settings.page \
	tasks-local.page \
	tasks-organizing.page \
	tasks-searching.page \
	tasks-usage-add-task.page \
	tasks-usage-delete-task.page \
	tasks-usage-edit-task.page \
	tasks-usage.page \
	tasks-using-several-tasklists.page \
	tasks-webdav.page \
	using-categories.page \
	xinclude-filter-vfolder-conditions.xml \
	xinclude-mail-account-identity.xml \
	xinclude-searching.xml

HELP_LINGUAS = ca cs de el en_GB es eu fr gl hu mk oc ru sl sv te zh_CN

-include $(top_srcdir)/git.mk
